Fixed: _desktop.scss changed the two big containers left and right to have the max height to bigger than the tablet version had. Changed the font size of the h1 header login to smaller because it was just a testing font size before. Made the upgrade description text to the bigger so you can read it more clearly, also made padding on both bottom and top to get more space between. The buttons got a max height of little bigger than on the tablet version, changed min to max in the desktop version. changed the title to the bigger. I both changed the shop description and the shop header title to a bigger text so you can see it better. Wanted also the total-snore-counter and the snore-per-second-counter to be bigger so changed that. Made some comments and organisized. Not perfect: The footer arent perfect but I didnt found out the solution for it to work in react in another way then this. I would rather have it to 100% width of course. Fixed: _mobile.scss I saw that I had missed some spacing so fixed that. Fixed: _tablet.scssMissed a comment and checked all the space that it was all good. Summary: Completed the Desktop mode.

--- a/sass/_desktop.scss
+++ b/sass/_desktop.scss
@@ -1,12 +1,86 @@
 @media (min-width: 1025px) {
     
-    h1.header-login {
-    font-size: 100px;
+/* Left and right big containers */ 
+    
+.user-stats-container.col-xs-12.col-md-6.order-md-2{
+    max-height: 1800px;
 }
+    
+.upgrade-container.col-xs-12.col-md-6.order-md-1{
+    max-height: 1800px;
+}
+    
+   /* Username Component */ 
+    
+/* Header login */
+    
+h1.header-login {
+    font-size: 50px;
+}
+    
+    /* Header Component */
+       
+/* Header Description */
     
     
 p#description-game {
     margin-left: 60px;
 }
+    
+    
+     /* DragonUpgrades/DragonUpgradesContainer Components */
+
+/* Basket buttons default, available */
+    
+p.upgrade-description{
+    font-size: 30px;
+    padding-bottom: 85px;
+    padding-top: 89px;
+}
+
+.Dragon-upgrade-basket-buttondisabled{
+    width: 100%;
+    max-height: 500px; 
+}
+
+.Dragon-upgrade-basket-button{
+    width: 100%;
+    max-height: 500px; 
+}
+    
+/* Title */ 
+    
+h1.basket-header-title{
+    font-size: 55px;
+}
+    
+     /* UserStatsContainer Component */    
+
+p.shop-description {
+    font-size: 30px;
+}
+
+h1.shop-header-title{
+    font-size: 55px;
+}
+    
+    /* TotalSnoreContainer Component */ 
+    
+    
+p.total-snore-counter {
+    font-size: 40px;
+}
+    
+p.snore-per-second-counter{
+    font-size: 40px;
+}
+         
+    /* Footer Component */
+/* Footer */
+    
+.footer-contact-info{
+    width: 113%;
+    margin-left: -4.6em;
+} 
      
     } /*  media 1025 ends here */
